@@ -336,7 +336,7 @@ void FCEU_DrawRecordingStatus(uint8* XBuf)
 			drawstatus(XBuf-ClipSidesOffset,2,28,0);
 			hasPlayRecIcon = true;
 		}
-		else if(FCEUMOV_Mode(MOVIEMODE_PLAY))
+		else if(FCEUMOV_Mode(MOVIEMODE_PLAY|MOVIEMODE_FINISHED))
 		{
 			drawstatus(XBuf-ClipSidesOffset,1,28,0);
 			hasPlayRecIcon = true;
